@@ -2,6 +2,9 @@
 Changes with Apache 2.3.0
   [Remove entries to the current 2.0 and 2.2 section below, when backported]
 
+  *) ab: Add -r option to continue after socket receive errors. 
+     [Filip Hanik <devlist hanik.com>]
+
   *) mod_ldap: Fix the search limit parameter to ldap_search_ext_s()
      for SDKs that define LDAP_NO_LIMIT to something other than -1.
      [David Jones <oscaremma gmail.com>]
